objects/Agency_Transfer_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Agency_Transfer__c</fullName>
        <label>Agency Transfer</label>
        <referenceTo>Agency_Transfer__c</referenceTo>
        <relationshipLabel>Agency Transfer Details</relationshipLabel>
        <relationshipName>Agency_Transfer_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Agreement_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Party</label>
        <referenceTo>Agreement_Party__c</referenceTo>
        <relationshipLabel>Agency Transfer Details</relationshipLabel>
        <relationshipName>Agency_Transfer_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facility_Amount_New__c</fullName>
        <label>Facility Amount (New)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facility_Amount_Original__c</fullName>
        <label>Facility Amount (Original)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facility_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility Party</label>
        <referenceTo>Facility_Party__c</referenceTo>
        <relationshipLabel>Agency Transfer Details</relationshipLabel>
        <relationshipName>Agency_Transfer_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facility_Percentage_New__c</fullName>
        <label>Facility Percentage (New)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Facility_Percentage_Original__c</fullName>
        <label>Facility Percentage (Original)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tranche_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tranche Party</label>
        <referenceTo>Tranche_Party__c</referenceTo>
        <relationshipLabel>Agency Transfer Details</relationshipLabel>
        <relationshipName>Agency_Transfer_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transferee__c</fullName>
        <formula>Agency_Transfer__r.Transferee2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transferee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transferor__c</fullName>
        <formula>Agency_Transfer__r.Transferor2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transferor</label>
        <type>Text</type>
    </fields>
    <label>Agency Transfer Detail</label>
    <nameField>
        <displayFormat>ATD-{0}</displayFormat>
        <label>ATD #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agency Transfer Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>